--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,33 +2,55 @@
 @import './material-icons/index';
 @import './material-design-icons/materialdesignicons';
 @import './font-awesome/font-awesome';
+@import "~vue-modal-dialog/src/modal";
+
+@mixin centerer() {
+  position: absolute !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spinner-position {
+  z-index:1900;
+  @include centerer;
+}
+
+.overlay {
+  z-index: 2 !important
+}
 
 .v-card-form {
     padding: 10px 20px;
   }
   
-  .modal--active > div > {
-    .menu__content--select, .menu__content, .dialog__content {
-      z-index: 1095 !important;
-    }
+.modal--active > div > {
+  .menu__content--select, .menu__content, .dialog__content {
+    z-index: 1095 !important;
   }
+}
+
+.modal--xlg {/* this is used for modal windows of "vue-modal-dialog": "^0.2.2" npm library */
+  width:900px;
+}
+
+.modal--full-width {/* this is used for modal windows of "vue-modal-dialog": "^0.2.2" npm library */
+  width:100%;
+}
   
-  .x-mask, .x-mask-msg.x-layer.x-mask-msg-default.ss-loadmask {
-    visibility: hidden;
+.datatable tbody td, .toolbar__content .toolbar__title {
+  cursor: default;
+}
+
+.vue-form-generator {
+  >fieldset {
+ border: none;
   }
-  
-  .datatable tbody td, .toolbar__content .toolbar__title {
-    cursor: default;
-  }
-  .vue-form-generator {
-    >fieldset {
-	  border: none;
-    }
-  }
+}
 
 .field-wrap>.input-group {
-      padding-top: 0;
-    }
+  padding-top: 0;
+}
 
 .vue-form-generator .form-group {
   &.field-vselect,
