added entity routes

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,8 +1,6 @@
-.toolbar__content {.speed-dial {
-  position: absolute;
-  bottom: -60px;
-  right: -20px;
-}
+.speed-dial {
+  bottom: 12px;
+  left: 12px;
 }
 .aside-background{
   background-color:#dcdde1 !important;
